# hip-key

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: buffer.rs  candidate.rs  engine.rs  keystroke.rs  langpack.rs  lib.rs
docs/: architecture.md  github-issues-plan.md  principles.md
ffi/: Cargo.toml
ffi/src/: lib.rs
lang/vi/: Cargo.toml
lang/vi/src/: lib.rs
