[workspace]
resolver = "2"
members = [
    "core",
    "ffi",
    "lang/vi",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hieple7985/hip-key"
authors = ["Hiệp"]

[workspace.dependencies]
# Core dependencies used across crates
